Add frontend capabilities
