# app.py
@@ -1,8 +1,10 @@
 """App for a sample transformation."""
 import logging
 
-from fastapi import FastAPI, HTTPException, Response
+from fastapi import FastAPI, HTTPException
 from fastapi.openapi.utils import get_openapi
+from fastapi.responses import FileResponse
+from fastapi.staticfiles import StaticFiles
 from marketplace_standard_app_api.models.transformation import (
     TransformationCreateResponse,
     TransformationId,
@@ -16,6 +18,7 @@ from marketplace_standard_app_api.models.transformation import (
 from transformation import HookesLaw, TransformationInput, TransformationOutput
 
 app = FastAPI()
+app.mount("/frontend", StaticFiles(directory="frontend"), name="frontend")
 
 
 def custom_openapi():
@@ -49,6 +52,21 @@ app.openapi = custom_openapi
 
 
 transformations = dict()
+
+
+@app.get("/", summary="Frontend", operation_id="frontend")
+async def get_index():
+    return FileResponse("frontend/index.html")
+
+
+@app.get("/script.js")
+async def get_script():
+    return FileResponse("frontend/script.js")
+
+
+@app.get("/styles.css")
+async def get_styles():
+    return FileResponse("frontend/styles.css")
 
 
 @app.get(
